# ecen4593_mips_emulator

./: .gitignore  CMakeLists.txt  Cache.cpp  Cache.h  Decode.cpp  Decode.h  Execute.cpp  Execute.h  Fetch.cpp  Fetch.h  Load_Insts.cpp  Load_Insts.h  Load_Program.c  Load_Program.h  Memory.cpp  Memory.h  README.md  WriteBack.cpp  WriteBack.h  _EXMEM.h  _IDEX.h  _IFID.h  _MEMWB.h  _decode.cpp  _instruction.h  decode.cpp  decode.h  fetch.cpp  fetch.h  global_vars.cpp  global_vars.h  intermediate_reg_structs.h  main.cpp
